k8s/jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: devops-tools
spec:
  clusterIP: 
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: httpport
      nodePort: 32000
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: jnlpport
      nodePort: 32185
      port: 50000
      protocol: TCP
      targetPort: 50000
  selector:
    app: jenkins-server
  sessionAffinity: None
  type: NodePort
